--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -438,7 +438,10 @@ Argument S specifies the syntax class.
             </dl><span id=
             "index-dtk_002dset_002dlanguage-1"></span>
             <div class="format">
-              <pre class="format">Set language.
+              <pre class=
+              "format">Set language. If your server supports it, also set the synthesis
+ voice, using the syntax language:voice , where language can be
+ omitted.
 
 (fn LANG)
 </pre>
@@ -741,8 +744,9 @@ current local  value to the result.
               'copiable-anchor'>¶</a></span></dt>
             </dl><span id="index-dtk_002dstop-2"></span>
             <div class="format">
-              <pre class="format">Stop speech.
-Optional arg ‘all’ or interactive call   silences notification stream as well.
+              <pre class=
+              "format">Stop speech.  Optional arg ‘all’ or interactive call silences
+notification stream as well.
 
 (fn &amp;optional ALL)
 </pre>
