--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -80,22 +80,21 @@
         accesskey="1">dtk-add-cleanup-pattern</a></li>
         <li><a href="#dtk_002dcloud" accesskey=
         "2">dtk-cloud</a></li>
-        <li><a href="#dtk_002dlist_002dlanguages" accesskey=
-        "3">dtk-list-languages</a></li>
         <li><a href="#dtk_002dlocal_002dserver" accesskey=
-        "4">dtk-local-server</a></li>
+        "3">dtk-local-server</a></li>
         <li><a href="#dtk_002dnotify_002dinitialize" accesskey=
-        "5">dtk-notify-initialize</a></li>
+        "4">dtk-notify-initialize</a></li>
         <li><a href="#dtk_002dnotify_002dstop" accesskey=
-        "6">dtk-notify-stop</a></li>
+        "5">dtk-notify-stop</a></li>
         <li><a href="#dtk_002dreset_002dstate" accesskey=
-        "7">dtk-reset-state</a></li>
+        "6">dtk-reset-state</a></li>
         <li><a href="#dtk_002dselect_002dserver" accesskey=
-        "8">dtk-select-server</a></li>
+        "7">dtk-select-server</a></li>
         <li><a href="#dtk_002dset_002dcharacter_002dscale"
-        accesskey="9">dtk-set-character-scale</a></li>
+        accesskey="8">dtk-set-character-scale</a></li>
         <li><a href=
-        "#dtk_002dset_002dchunk_002dseparator_002dsyntax">dtk-set-chunk-separator-syntax</a></li>
+        "#dtk_002dset_002dchunk_002dseparator_002dsyntax"
+        accesskey="9">dtk-set-chunk-separator-syntax</a></li>
         <li><a href=
         "#dtk_002dset_002dlanguage">dtk-set-language</a></li>
         <li><a href=
@@ -194,25 +193,8 @@ this pattern if previously added.
           </dd>
         </dl>
       </div>
-      <div class="subsubsection" id="dtk_002dlist_002dlanguages">
-        <h4 class="subsubsection">12.5.1.3 dtk-list-languages</h4>
-        <dl class="def">
-          <dt id="index-dtk_002dlist_002dlanguages"><span class=
-          "category">Command:</span>
-          <span><strong>dtk-list-languages</strong> <a href=
-          '#index-dtk_002dlist_002dlanguages' class=
-          'copiable-anchor'>¶</a></span></dt>
-          <dd>
-            <span id="index-dtk_002dlist_002dlanguages-1"></span>
-            <div class="format">
-              <pre class="format">List  available languages.
-</pre>
-            </div>
-          </dd>
-        </dl>
-      </div>
       <div class="subsubsection" id="dtk_002dlocal_002dserver">
-        <h4 class="subsubsection">12.5.1.4 dtk-local-server</h4>
+        <h4 class="subsubsection">12.5.1.3 dtk-local-server</h4>
         <dl class="def">
           <dt id="index-dtk_002dlocal_002dserver"><span class=
           "category">Command:</span>
@@ -245,7 +227,7 @@ program. Port defaults to dtk-local-server-port
       </div>
       <div class="subsubsection" id=
       "dtk_002dnotify_002dinitialize">
-        <h4 class="subsubsection">12.5.1.5
+        <h4 class="subsubsection">12.5.1.4
         dtk-notify-initialize</h4>
         <dl class="def">
           <dt id="index-dtk_002dnotify_002dinitialize"><span class=
@@ -273,7 +255,7 @@ program. Port defaults to dtk-local-server-port
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dnotify_002dstop">
-        <h4 class="subsubsection">12.5.1.6 dtk-notify-stop</h4>
+        <h4 class="subsubsection">12.5.1.5 dtk-notify-stop</h4>
         <dl class="def">
           <dt id="index-dtk_002dnotify_002dstop"><span class=
           "category">Command:</span>
@@ -299,7 +281,7 @@ program. Port defaults to dtk-local-server-port
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dreset_002dstate">
-        <h4 class="subsubsection">12.5.1.7 dtk-reset-state</h4>
+        <h4 class="subsubsection">12.5.1.6 dtk-reset-state</h4>
         <dl class="def">
           <dt id="index-dtk_002dreset_002dstate"><span class=
           "category">Command:</span>
@@ -323,7 +305,7 @@ program. Port defaults to dtk-local-server-port
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dselect_002dserver">
-        <h4 class="subsubsection">12.5.1.8 dtk-select-server</h4>
+        <h4 class="subsubsection">12.5.1.7 dtk-select-server</h4>
         <dl class="def">
           <dt id="index-dtk_002dselect_002dserver-1"><span class=
           "category">Command:</span>
@@ -353,7 +335,7 @@ program. Port defaults to dtk-local-server-port
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dcharacter_002dscale">
-        <h4 class="subsubsection">12.5.1.9
+        <h4 class="subsubsection">12.5.1.8
         dtk-set-character-scale</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dcharacter_002dscale-1">
@@ -387,7 +369,7 @@ then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dchunk_002dseparator_002dsyntax">
-        <h4 class="subsubsection">12.5.1.10
+        <h4 class="subsubsection">12.5.1.9
         dtk-set-chunk-separator-syntax</h4>
         <dl class="def">
           <dt id=
@@ -420,7 +402,7 @@ Argument S specifies the syntax class.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002dlanguage">
-        <h4 class="subsubsection">12.5.1.11 dtk-set-language</h4>
+        <h4 class="subsubsection">12.5.1.10 dtk-set-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dlanguage"><span class=
           "category">Command:</span>
@@ -451,7 +433,7 @@ Argument S specifies the syntax class.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dnext_002dlanguage">
-        <h4 class="subsubsection">12.5.1.12
+        <h4 class="subsubsection">12.5.1.11
         dtk-set-next-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dnext_002dlanguage">
@@ -478,7 +460,7 @@ Argument S specifies the syntax class.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpredefined_002dspeech_002drate">
-        <h4 class="subsubsection">12.5.1.13
+        <h4 class="subsubsection">12.5.1.12
         dtk-set-predefined-speech-rate</h4>
         <dl class="def">
           <dt id=
@@ -567,7 +549,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpreferred_002dlanguage">
-        <h4 class="subsubsection">12.5.1.14
+        <h4 class="subsubsection">12.5.1.13
         dtk-set-preferred-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dpreferred_002dlanguage">
@@ -590,7 +572,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dprevious_002dlanguage">
-        <h4 class="subsubsection">12.5.1.15
+        <h4 class="subsubsection">12.5.1.14
         dtk-set-previous-language</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dprevious_002dlanguage">
@@ -616,7 +598,7 @@ rate = dtk-speech-rate-base + dtk-speech-rate-step * level.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002dpunctuations">
-        <h4 class="subsubsection">12.5.1.16
+        <h4 class="subsubsection">12.5.1.15
         dtk-set-punctuations</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002dpunctuations-1">
@@ -649,7 +631,7 @@ current local  value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpunctuations_002dto_002dall">
-        <h4 class="subsubsection">12.5.1.17
+        <h4 class="subsubsection">12.5.1.16
         dtk-set-punctuations-to-all</h4>
         <dl class="def">
           <dt id=
@@ -674,7 +656,7 @@ Interactive PREFIX arg sets punctuation mode globally.
       </div>
       <div class="subsubsection" id=
       "dtk_002dset_002dpunctuations_002dto_002dsome">
-        <h4 class="subsubsection">12.5.1.18
+        <h4 class="subsubsection">12.5.1.17
         dtk-set-punctuations-to-some</h4>
         <dl class="def">
           <dt id=
@@ -698,7 +680,7 @@ Interactive PREFIX arg sets punctuation mode globally.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dset_002drate">
-        <h4 class="subsubsection">12.5.1.19 dtk-set-rate</h4>
+        <h4 class="subsubsection">12.5.1.18 dtk-set-rate</h4>
         <dl class="def">
           <dt id="index-dtk_002dset_002drate-1"><span class=
           "category">Command:</span>
@@ -727,7 +709,7 @@ current local  value to the result.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dstop">
-        <h4 class="subsubsection">12.5.1.20 dtk-stop</h4>
+        <h4 class="subsubsection">12.5.1.19 dtk-stop</h4>
         <dl class="def">
           <dt id="index-dtk_002dstop-1"><span class=
           "category">Command:</span>
@@ -755,7 +737,7 @@ notification stream as well.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dtoggle_002dcaps">
-        <h4 class="subsubsection">12.5.1.21 dtk-toggle-caps</h4>
+        <h4 class="subsubsection">12.5.1.20 dtk-toggle-caps</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dcaps-1"><span class=
           "category">Command:</span>
@@ -784,7 +766,7 @@ then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dpunctuation_002dmode">
-        <h4 class="subsubsection">12.5.1.22
+        <h4 class="subsubsection">12.5.1.21
         dtk-toggle-punctuation-mode</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dpunctuation_002dmode">
@@ -816,7 +798,7 @@ Interactive PREFIX arg makes the new setting global.
         </dl>
       </div>
       <div class="subsubsection" id="dtk_002dtoggle_002dquiet">
-        <h4 class="subsubsection">12.5.1.23 dtk-toggle-quiet</h4>
+        <h4 class="subsubsection">12.5.1.22 dtk-toggle-quiet</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dquiet-1"><span class=
           "category">Command:</span>
@@ -837,7 +819,7 @@ prefix arg causes this setting to become global.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dspeak_002dnonprinting_002dchars">
-        <h4 class="subsubsection">12.5.1.24
+        <h4 class="subsubsection">12.5.1.23
         dtk-toggle-speak-nonprinting-chars</h4>
         <dl class="def">
           <dt id=
@@ -868,7 +850,7 @@ value, and then set the current local value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dsplit_002dcaps">
-        <h4 class="subsubsection">12.5.1.25
+        <h4 class="subsubsection">12.5.1.24
         dtk-toggle-split-caps</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dsplit_002dcaps-1">
@@ -900,7 +882,7 @@ result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dsplitting_002don_002dwhite_002dspace">
-        <h4 class="subsubsection">12.5.1.26
+        <h4 class="subsubsection">12.5.1.25
         dtk-toggle-splitting-on-white-space</h4>
         <dl class="def">
           <dt id=
@@ -931,7 +913,7 @@ result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dtoggle_002dstrip_002doctals">
-        <h4 class="subsubsection">12.5.1.27
+        <h4 class="subsubsection">12.5.1.26
         dtk-toggle-strip-octals</h4>
         <dl class="def">
           <dt id="index-dtk_002dtoggle_002dstrip_002doctals">
@@ -962,7 +944,7 @@ value to the result.
       </div>
       <div class="subsubsection" id=
       "dtk_002dunicode_002dcustomize_002dchar">
-        <h4 class="subsubsection">12.5.1.28
+        <h4 class="subsubsection">12.5.1.27
         dtk-unicode-customize-char</h4>
         <dl class="def">
           <dt id="index-dtk_002dunicode_002dcustomize_002dchar">
@@ -988,7 +970,7 @@ When called interactively, CHAR defaults to the character after point.
       </div>
       <div class="subsubsection" id=
       "dtk_002dunicode_002duncustomize_002dchar">
-        <h4 class="subsubsection">12.5.1.29
+        <h4 class="subsubsection">12.5.1.28
         dtk-unicode-uncustomize-char</h4>
         <dl class="def">
           <dt id="index-dtk_002dunicode_002duncustomize_002dchar">
@@ -1013,7 +995,7 @@ When called interactively, CHAR defaults to the character after point.
         </dl>
       </div>
       <div class="subsubsection" id="tts_002drestart">
-        <h4 class="subsubsection">12.5.1.30 tts-restart</h4>
+        <h4 class="subsubsection">12.5.1.29 tts-restart</h4>
         <dl class="def">
           <dt id="index-tts_002drestart"><span class=
           "category">Command:</span>
@@ -1038,7 +1020,7 @@ When called interactively, CHAR defaults to the character after point.
         </dl>
       </div>
       <div class="subsubsection" id="tts_002dspeak_002dversion">
-        <h4 class="subsubsection">12.5.1.31 tts-speak-version</h4>
+        <h4 class="subsubsection">12.5.1.30 tts-speak-version</h4>
         <dl class="def">
           <dt id="index-tts_002dspeak_002dversion-1"><span class=
           "category">Command:</span>
