Duplicate ANNOUNCE-56.html history in ../html/releases/release-56.html history.

--- a/html/releases/release-56.html
+++ b/html/releases/release-56.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-29 Fri 10:57 -->
+<!-- 2022-04-30 Sat 08:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Announcing Emacspeak 56.0—AgileDog!</title>
@@ -201,16 +201,16 @@
 The enjoyment of one's tools is an essential ingredient of successful work. &#x2013; Donald E. Knuth
 </p>
 
-<div id="outline-container-org1dc55be" class="outline-2">
-<h2 id="org1dc55be"><span class="section-number-2">1.</span> For Immediate Release:</h2>
+<div id="outline-container-orgb5e9224" class="outline-2">
+<h2 id="orgb5e9224"><span class="section-number-2">1.</span> For Immediate Release:</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 San Jose, CA, (May 1, 2022)
 </p>
 </div>
 
-<div id="outline-container-orgbe06e94" class="outline-3">
-<h3 id="orgbe06e94"><span class="section-number-3">1.1.</span> Emacspeak 56.0 (AgileDog)  Unleashed!  🦮</h3>
+<div id="outline-container-org464b166" class="outline-3">
+<h3 id="org464b166"><span class="section-number-3">1.1.</span> Emacspeak 56.0 (AgileDog)  Unleashed!  🦮</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 &#x2014; Making Accessible Computing Effortless!
@@ -223,7 +223,7 @@ cost of Ownership makes priceless software Universally affordable!
 
 <p>
 Emacspeak Inc (NASDOG: ESPK) &#x2014; <a href="http://github.com/tvraman/emacspeak">http://github.com/tvraman/emacspeak</a>
-announces  immediate world-wide availability of <a href="https://github.com/tvraman/emacspeak/releases/download/55.0/emacspeak-55.0.tar.bz2">Emacspeak 56.0</a>
+announces  immediate world-wide availability of <a href="https://github.com/tvraman/emacspeak/releases/download/56.0/emacspeak-56.0.tar.bz2">Emacspeak 56.0</a>
 (AgileDog) 🦮 &#x2014; a powerful audio desktop that leverages today's
 evolving Data, Social and Assistant-Oriented Internet cloud to enable
 working efficiently and effectively from anywhere!
@@ -232,8 +232,8 @@ working efficiently and effectively from anywhere!
 </div>
 </div>
 
-<div id="outline-container-org8e7d21b" class="outline-2">
-<h2 id="org8e7d21b"><span class="section-number-2">2.</span> Investors Note:</h2>
+<div id="outline-container-orgbf57205" class="outline-2">
+<h2 id="orgbf57205"><span class="section-number-2">2.</span> Investors Note:</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 With several prominent tweeters expanding coverage of <span class="underline">#emacspeak</span>,
@@ -245,8 +245,8 @@ in the tech sector.
 </div>
 </div>
 
-<div id="outline-container-org30c13c2" class="outline-2">
-<h2 id="org30c13c2"><span class="section-number-2">3.</span> What Is It?</h2>
+<div id="outline-container-org7b7ae95" class="outline-2">
+<h2 id="org7b7ae95"><span class="section-number-2">3.</span> What Is It?</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Emacspeak is a fully functional audio desktop that provides complete
@@ -262,8 +262,8 @@ access to the evolving assistant-oriented social Internet cloud.
 </div>
 </div>
 
-<div id="outline-container-orgb41dd3e" class="outline-2">
-<h2 id="orgb41dd3e"><span class="section-number-2">4.</span> Major Enhancements:</h2>
+<div id="outline-container-org2672b79" class="outline-2">
+<h2 id="org2672b79"><span class="section-number-2">4.</span> Major Enhancements:</h2>
 <div class="outline-text-2" id="text-4">
 <ol class="org-ol">
 <li>Updated eldoc support 🕮</li>
@@ -288,8 +288,8 @@ Note: This version <b>requires</b> emacs-27.1 or later.
 </div>
 </div>
 
-<div id="outline-container-org52dfda9" class="outline-2">
-<h2 id="org52dfda9"><span class="section-number-2">5.</span> Establishing Liberty, Equality And Freedom:</h2>
+<div id="outline-container-org0ef9910" class="outline-2">
+<h2 id="org0ef9910"><span class="section-number-2">5.</span> Establishing Liberty, Equality And Freedom:</h2>
 <div class="outline-text-2" id="text-5">
 <p>
   Never a toy system, Emacspeak is voluntarily bundled with all
@@ -333,8 +333,8 @@ press releases.
 </div>
 </div>
 
-<div id="outline-container-orgb993d6d" class="outline-2">
-<h2 id="orgb993d6d"><span class="section-number-2">6.</span> Independent Test Results:</h2>
+<div id="outline-container-org551e6b3" class="outline-2">
+<h2 id="org551e6b3"><span class="section-number-2">6.</span> Independent Test Results:</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Independent test results have proven that unlike some modern (and
@@ -348,8 +348,8 @@ computer&#x2013; that stops functioning when Emacspeak is uninstalled!”.
 </p>
 </div>
 
-<div id="outline-container-org476b30e" class="outline-3">
-<h3 id="org476b30e"><span class="section-number-3">6.1.</span> Note from Aster,Bubbles and Tilden:</h3>
+<div id="outline-container-org7c1ca92" class="outline-3">
+<h3 id="org7c1ca92"><span class="section-number-3">6.1.</span> Note from Aster,Bubbles and Tilden:</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 UnDoctored Videos Inc. is looking for volunteers to star in a
@@ -359,8 +359,8 @@ video demonstrating such complete user failure.
 </div>
 </div>
 
-<div id="outline-container-org41c6203" class="outline-2">
-<h2 id="org41c6203"><span class="section-number-2">7.</span> Obtaining Emacspeak:</h2>
+<div id="outline-container-orgd69c955" class="outline-2">
+<h2 id="orgd69c955"><span class="section-number-2">7.</span> Obtaining Emacspeak:</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Emacspeak can be downloaded from GitHub &#x2014; see
@@ -377,8 +377,8 @@ The latest development snapshot of Emacspeak is always available at
 </div>
 </div>
 
-<div id="outline-container-orgb20764e" class="outline-2">
-<h2 id="orgb20764e"><span class="section-number-2">8.</span> History:</h2>
+<div id="outline-container-org42c0daf" class="outline-2">
+<h2 id="org42c0daf"><span class="section-number-2">8.</span> History:</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>Emacspeak 56.0 (AgileDog) belies its age  to be as agile as Tilden.</li>
@@ -531,8 +531,8 @@ to provide the first fully interactive speech-enabled WebTop.</li>
 </div>
 </div>
 
-<div id="outline-container-orgfbc831c" class="outline-2">
-<h2 id="orgfbc831c"><span class="section-number-2">9.</span> About Emacspeak:</h2>
+<div id="outline-container-org30cfe3c" class="outline-2">
+<h2 id="org30cfe3c"><span class="section-number-2">9.</span> About Emacspeak:</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Originally based at Cornell (NY) —
@@ -556,8 +556,8 @@ valuable knowledge base for new users.
 </div>
 
 
-<div id="outline-container-org8018a61" class="outline-2">
-<h2 id="org8018a61"><span class="section-number-2">10.</span> Press/Analyst Contact: Tilden Labrador</h2>
+<div id="outline-container-orgac9045b" class="outline-2">
+<h2 id="orgac9045b"><span class="section-number-2">10.</span> Press/Analyst Contact: Tilden Labrador</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 Going forward, Tilden acknowledges his exclusive monopoly on
@@ -589,7 +589,7 @@ their respective owners.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2022-04-29 Fri 10:57</p>
+<p class="date">Created: 2022-04-30 Sat 08:57</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
