--- a/manual/emacspeak_002dchess.html
+++ b/manual/emacspeak_002dchess.html
@@ -72,9 +72,9 @@
     <p>The Emacs Chess package provides a rich environment for
     playing and exploring Chess Games. That package comes with a
     light-weight module that announces moves.</p>
-    <p>This module aims do do much more, including:</p>
+    <p>This module aims to do much more, including:</p>
     <ul>
-      <li>Navigate the board along various axies with
+      <li>Navigate the board along various axes with
       audio-formatted output.</li>
       <li>Browse games via rich audio-formatted output.</li>
       <li>Speech-enable all interactive commands provided by the
