--- a/manual/plain_002dvoices.html
+++ b/manual/plain_002dvoices.html
@@ -69,9 +69,8 @@
     <span id="plain_002dvoices-1"></span>
     <h3 class="section">12.225 plain-voices</h3>
     <p>This module defines the various voices used in voice-lock
-    mode. This module is Plain i.e. suitable for a device for which
-    you haven’t yet implemented appropriate voice-locking
-    controls</p>
+    mode. Module Plain is suitable for a device for which you
+    haven’t yet implemented appropriate voice-locking controls</p>
   </div>
 </body>
 </html>
