--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -281,11 +281,10 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dsounds.html#index-_003cfn_003e-_0028"><code>&lt;fn&gt;
+        "amixer.html#index-_003cfn_003e-_0028"><code>&lt;fn&gt;
         (</code></a>:</td>
         <td>&nbsp;</td>
-        <td valign="top"><a href=
-        "emacspeak_002dsounds.html">emacspeak-sounds</a></td>
+        <td valign="top"><a href="amixer.html">amixer</a></td>
       </tr>
       <tr>
         <td></td>
@@ -3590,11 +3589,10 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dsounds.html#index-C_002de-_0028"><code>C-e
+        "amixer.html#index-C_002de-_0028"><code>C-e
         (</code></a>:</td>
         <td>&nbsp;</td>
-        <td valign="top"><a href=
-        "emacspeak_002dsounds.html">emacspeak-sounds</a></td>
+        <td valign="top"><a href="amixer.html">amixer</a></td>
       </tr>
       <tr>
         <td></td>
