--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- Created by GNU Texinfo 6.8, https://www.gnu.org/software/texinfo/ -->
 <head>
@@ -95,7 +95,15 @@
           <em>(&amp;optional refresh)</em> <a href='#index-amixer'
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
-            <span id="index-amixer-1"></span>
+            <dl compact="compact">
+              <dt id='index-C_002de-_0028'><span><kbd>C-e (</kbd>
+              <a href='#index-C_002de-_0028' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-_0028'>
+              <span><kbd>&lt;fn&gt; (</kbd> <a href=
+              '#index-_003cfn_003e-_0028' class=
+              'copiable-anchor'>¶</a></span></dt>
+            </dl><span id="index-amixer-1"></span>
             <div class="format">
               <pre class="format">ALSA settings.
 Interactive prefix arg refreshes cache.
