--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1510,8 +1510,8 @@ created by command ‘emacspeak-hide-or-expose-block’ are indicated
 with auditory icon ellipses. Presence of additional
 presentational overlays (created via property display,
 before-string, or after-string) is indicated with auditory icon
-‘more’.  These can then be spoken using command
-C-e C-M-l.
+‘left’, ‘right’, or ‘more’ as appropriate.  These can then be
+spoken using command C-e C-M-l.
 
 (fn &amp;optional ARG)
 </pre>
