--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -512,15 +512,7 @@ To leave, press C-g.
           <a href='#index-emacspeak_002dlink_002dcurrent_002dfile'
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
-            <dl compact="compact">
-              <dt id='index-C_002de-M_002dl'><span><kbd>C-e
-              M-l</kbd> <a href='#index-C_002de-M_002dl' class=
-              'copiable-anchor'>¶</a></span></dt>
-              <dt id='index-_003cfn_003e-M_002dl'>
-              <span><kbd>&lt;fn&gt; M-l</kbd> <a href=
-              '#index-_003cfn_003e-M_002dl' class=
-              'copiable-anchor'>¶</a></span></dt>
-            </dl><span id=
+            <span id=
             "index-emacspeak_002dlink_002dcurrent_002dfile-1"></span>
             <div class="format">
               <pre class=
