--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -649,15 +649,6 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dspeak.html#index-_003cfn_003e-C_002dM_002dl">
-        <code>&lt;fn&gt; C-M-l</code></a>:</td>
-        <td>&nbsp;</td>
-        <td valign="top"><a href=
-        "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td valign="top"><a href=
         "emacspeak_002dspeak.html#index-_003cfn_003e-C_002dM_002dSPC">
         <code>&lt;fn&gt; C-M-SPC</code></a>:</td>
         <td>&nbsp;</td>
@@ -1630,11 +1621,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html#index-_003cfn_003e-M_002dl"><code>
+        "emacspeak_002dspeak.html#index-_003cfn_003e-M_002dl"><code>
         &lt;fn&gt; M-l</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+        "emacspeak_002dspeak.html">emacspeak-speak</a></td>
       </tr>
       <tr>
         <td></td>
@@ -4015,15 +4006,6 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dspeak.html#index-C_002de-C_002dM_002dl"><code>
-        C-e C-M-l</code></a>:</td>
-        <td>&nbsp;</td>
-        <td valign="top"><a href=
-        "emacspeak_002dspeak.html">emacspeak-speak</a></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td valign="top"><a href=
         "emacspeak_002dspeak.html#index-C_002de-C_002dM_002dSPC"><code>
         C-e C-M-SPC</code></a>:</td>
         <td>&nbsp;</td>
@@ -5277,11 +5259,11 @@
       <tr>
         <td></td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html#index-C_002de-M_002dl"><code>C-e
+        "emacspeak_002dspeak.html#index-C_002de-M_002dl"><code>C-e
         M-l</code></a>:</td>
         <td>&nbsp;</td>
         <td valign="top"><a href=
-        "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+        "emacspeak_002dspeak.html">emacspeak-speak</a></td>
       </tr>
       <tr>
         <td></td>
