--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1511,7 +1511,7 @@ with auditory icon ellipses. Presence of additional
 presentational overlays (created via property display,
 before-string, or after-string) is indicated with auditory icon
 ‘left’, ‘right’, or ‘more’ as appropriate.  These can then be
-spoken using command C-e C-M-l.
+spoken using command C-e M-l.
 
 (fn &amp;optional ARG)
 </pre>
@@ -1879,12 +1879,12 @@ Useful to listen to a buffer without switching  contexts.
           class='copiable-anchor'>¶</a></span></dt>
           <dd>
             <dl compact="compact">
-              <dt id='index-C_002de-C_002dM_002dl'><span><kbd>C-e
-              C-M-l</kbd> <a href='#index-C_002de-C_002dM_002dl'
-              class='copiable-anchor'>¶</a></span></dt>
-              <dt id='index-_003cfn_003e-C_002dM_002dl'>
-              <span><kbd>&lt;fn&gt; C-M-l</kbd> <a href=
-              '#index-_003cfn_003e-C_002dM_002dl' class=
+              <dt id='index-C_002de-M_002dl'><span><kbd>C-e
+              M-l</kbd> <a href='#index-C_002de-M_002dl' class=
+              'copiable-anchor'>¶</a></span></dt>
+              <dt id='index-_003cfn_003e-M_002dl'>
+              <span><kbd>&lt;fn&gt; M-l</kbd> <a href=
+              '#index-_003cfn_003e-M_002dl' class=
               'copiable-anchor'>¶</a></span></dt>
             </dl><span id=
             "index-emacspeak_002dspeak_002doverlay_002dproperties-1"></span>
