--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -745,7 +745,7 @@ replaced with a repeat count.
 
 <dl class="def">
 <dt id="index-User-Option-14"><span class="category">Variable: </span><span><strong>User Option</strong> <em>tts-notification-device</em><a href='#index-User-Option-14' class='copiable-anchor'> &para;</a></span></dt>
-<dd><p>Virtual ALSA device to use for notifications stream.
+<dd><p>Virtual sound device to use for notifications stream.
 Set to nil to disable a separate Notification stream.
 </p>
 </dd></dl>
