--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -581,8 +581,8 @@ put in the kill ring for convenience.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire buffer.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire buffer.
 </pre></div>
 </dd></dl>
@@ -713,9 +713,9 @@ arg to give to command yank.
 <div class="format">
 <pre class="format">Speak the line containing the mark.
 With no argument, speaks the line containing the mark&ndash;this is
-where ‘exchange-point-and-mark’ C-x C-x would
-jump.  Numeric prefix arg ’COUNT’ speaks line containing mark ’n’
-where ’n’ is one less than the number of times one has to jump
+where C-x C-x would
+jump.  Numeric prefix arg  ‘COUNT’ speaks line containing mark  ‘n’
+where  ‘n’ is one less than the number of times one has to jump
 using ‘set-mark-command’ to get to this marked position.  The
 location of the mark is indicated by an aural highlight. 
 
@@ -868,8 +868,8 @@ Negative prefix arg speaks from start of buffer to point.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire help.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire help.
 </pre></div>
 </dd></dl>
@@ -922,8 +922,8 @@ spoken using command C-e M-l.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire line.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire line.
 </pre></div>
 </dd></dl>
@@ -1173,8 +1173,8 @@ Negative prefix arg will read from start of current page to point.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire page.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire page.
 </pre></div>
 </dd></dl>
@@ -1214,8 +1214,8 @@ Negative prefix arg will read from start of current paragraph to point.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire paragraph.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire paragraph.
 </pre></div>
 </dd></dl>
@@ -1441,8 +1441,8 @@ Negative prefix arg speaks from start of sexp to point.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire sexp.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire sexp.
 </pre></div>
 </dd></dl>
@@ -1632,8 +1632,8 @@ spelled out  instead of being spoken.
 
 <div class="format">
 <pre class="format">Speak the start of, rest of, or the entire word.
-’s’ to speak the start.
-’r’ to speak the rest.
+ ‘s’ to speak the start.
+ ‘r’ to speak the rest.
 any other key to speak entire word.
 </pre></div>
 </dd></dl>
