--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -84,7 +84,7 @@ Wowser">EWW</acronym>), read
 the <acronym title="Emacs Web
 Wowser">EWW</acronym> documentation, then read See <a href="emacspeak_002deww.html">emacspeak-eww</a>.
 </p>
-<p>This chapter documents a total of 1146 commands and 146 options.
+<p>This chapter documents a total of 1153 commands and 147 options.
 </p>
 
 <ul class="section-toc">
@@ -311,6 +311,7 @@ Wowser">EWW</acronym> documentation, then read See <a href="emacspeak_002deww.ht
 <li><a href="gm_002dnnir.html">gm-nnir</a></li>
 <li><a href="gmaps.html">gmaps</a></li>
 <li><a href="ladspa.html">ladspa</a></li>
+<li><a href="light.html">light</a></li>
 <li><a href="mac_002dvoices.html">mac-voices</a></li>
 <li><a href="outloud_002dvoices.html">outloud-voices</a></li>
 <li><a href="plain_002dvoices.html">plain-voices</a></li>
