--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -129,6 +129,8 @@ example, Muggle &lsquo;<samp>ViewMode</samp>&rsquo; binds <code>s</code> to this
 The heads for the associated hydra are:
 
 &quot;?&quot;:    ‘(emacspeak-hydra-self-help &quot;emacspeak-muggles-brightness&quot;)’,
+&quot;b&quot;:    ‘emacspeak-brightness-alert-toggle’,
+&quot;B&quot;:    ‘emacspeak-brightness-autoblack-toggle’,
 &quot;s&quot;:    ‘light-set’,
 &quot;g&quot;:    ‘light-get’,
 &quot;t&quot;:    ‘emacspeak-hydra-toggle-talkative’,
