--- a/manual/ladspa.html
+++ b/manual/ladspa.html
@@ -16,7 +16,7 @@
 <link href="Concept-Index.html" rel="index" title="Concept Index">
 <link href="index.html#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="Emacspeak-Commands-And-Options.html" rel="up" title="Emacspeak Commands And Options">
-<link href="mac_002dvoices.html" rel="next" title="mac-voices">
+<link href="light.html" rel="next" title="light">
 <link href="gmaps.html" rel="prev" title="gmaps">
 <style type="text/css">
 <!--
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 <div class="section" id="ladspa">
 <div class="header">
 <p>
-Next: <a href="mac_002dvoices.html" accesskey="n" rel="next">mac-voices</a>, Previous: <a href="gmaps.html" accesskey="p" rel="prev">gmaps</a>, Up: <a href="Emacspeak-Commands-And-Options.html" accesskey="u" rel="up">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
+Next: <a href="light.html" accesskey="n" rel="next">light</a>, Previous: <a href="gmaps.html" accesskey="p" rel="prev">gmaps</a>, Up: <a href="Emacspeak-Commands-And-Options.html" accesskey="u" rel="up">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
 <span id="ladspa-1"></span><h3 class="section">12.223 ladspa</h3>
@@ -157,7 +157,7 @@ p		previous-line
 <hr>
 <div class="header">
 <p>
-Next: <a href="mac_002dvoices.html">mac-voices</a>, Previous: <a href="gmaps.html">gmaps</a>, Up: <a href="Emacspeak-Commands-And-Options.html">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
+Next: <a href="light.html">light</a>, Previous: <a href="gmaps.html">gmaps</a>, Up: <a href="Emacspeak-Commands-And-Options.html">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
 </div>
 
 
