--- a/manual/mac_002dvoices.html
+++ b/manual/mac_002dvoices.html
@@ -17,7 +17,7 @@
 <link href="index.html#SEC_Contents" rel="contents" title="Table of Contents">
 <link href="Emacspeak-Commands-And-Options.html" rel="up" title="Emacspeak Commands And Options">
 <link href="outloud_002dvoices.html" rel="next" title="outloud-voices">
-<link href="ladspa.html" rel="prev" title="ladspa">
+<link href="light.html" rel="prev" title="light">
 <style type="text/css">
 <!--
 a.copiable-anchor {visibility: hidden; text-decoration: none; line-height: 0em}
@@ -46,10 +46,10 @@ ul.no-bullet {list-style: none}
 <div class="section" id="mac_002dvoices">
 <div class="header">
 <p>
-Next: <a href="outloud_002dvoices.html" accesskey="n" rel="next">outloud-voices</a>, Previous: <a href="ladspa.html" accesskey="p" rel="prev">ladspa</a>, Up: <a href="Emacspeak-Commands-And-Options.html" accesskey="u" rel="up">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
+Next: <a href="outloud_002dvoices.html" accesskey="n" rel="next">outloud-voices</a>, Previous: <a href="light.html" accesskey="p" rel="prev">light</a>, Up: <a href="Emacspeak-Commands-And-Options.html" accesskey="u" rel="up">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
 </div>
 <hr>
-<span id="mac_002dvoices-1"></span><h3 class="section">12.224 mac-voices</h3>
+<span id="mac_002dvoices-1"></span><h3 class="section">12.225 mac-voices</h3>
 
 <p>This module defines the various voices used in voice-lock mode by Mac TTS.
 </p>
@@ -57,10 +57,10 @@ Next: <a href="outloud_002dvoices.html" accesskey="n" rel="next">outloud-voices<
 <li><a href="#mac_002dvoices-Options" accesskey="1">mac-voices Options</a></li>
 </ul>
 <div class="subsection" id="mac_002dvoices-Options">
-<h4 class="subsection">12.224.1 mac-voices Options</h4>
+<h4 class="subsection">12.225.1 mac-voices Options</h4>
 
 <dl class="def">
-<dt id="index-User-Option-113"><span class="category">Variable: </span><span><strong>User Option</strong> <em>mac-default-speech-rate</em><a href='#index-User-Option-113' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-User-Option-114"><span class="category">Variable: </span><span><strong>User Option</strong> <em>mac-default-speech-rate</em><a href='#index-User-Option-114' class='copiable-anchor'> &para;</a></span></dt>
 <dd><p>Default speech rate for mac.
 </p>
 </dd></dl>
