--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -50,7 +50,7 @@ Previous: <a href="xbacklight.html" accesskey="p" rel="prev">xbacklight</a>, Up:
 <hr>
 <span id="URL-Templates-1"></span><h3 class="section">12.237 URL Templates</h3>
 
-<p>This section documents a total of 75 URL Templates.
+<p>This section documents a total of 74 URL Templates.
 </p>
 <p>All of these URL templates can be invoked via command
  <kbd>M-x emacspeak-url-template-fetch</kbd> normally bound to
@@ -212,9 +212,7 @@ Format is stationid+AM/FM.</p></li><li> <b>Tech News From CNet</b>
 
 <p>Retrieve download page at Sourceforge for specified project.</p></li><li> <b>sourceforge project</b>
 
-<p>Open specified project page at SourceForge.</p></li><li> <b>stock market from google</b>
-
-<p>Light-weight stock market summary from Google.</p></li><li> <b>w3c IRC Logs</b>
+<p>Open specified project page at SourceForge.</p></li><li> <b>w3c IRC Logs</b>
 
 <p>Use this to pull up the
 archived logs from the W3C IRC. You need to know the exact
