--- a/manual/index.html
+++ b/manual/index.html
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 
 
 <p>This manual documents <strong>Emacspeak, The Complete Audio Desktop</strong>
-and  was last updated on June 18, 2022.
+and  was last updated on June 21, 2022.
 </p>
 
 <div class="top" id="Top">
@@ -1455,12 +1455,13 @@ Next: <a href="Copyright.html" accesskey="n" rel="next">Copyright</a> &nbsp; [<a
     </ul></li>
     <li><a id="toc-emacspeak_002dsounds-1" href="emacspeak_002dsounds.html">12.176 emacspeak-sounds</a>
     <ul class="no-bullet">
-      <li><a id="toc-Emacspeak_002dSounds-Commands" href="emacspeak_002dsounds.html#Emacspeak_002dSounds-Commands">12.176.1 Emacspeak-Sounds Commands</a>
+      <li><a id="toc-Design-goal_003a" href="emacspeak_002dsounds.html#Design-goal_003a">12.176.1 Design goal:</a></li>
+      <li><a id="toc-Emacspeak_002dSounds-Commands" href="emacspeak_002dsounds.html#Emacspeak_002dSounds-Commands">12.176.2 Emacspeak-Sounds Commands</a>
       <ul class="no-bullet">
-        <li><a id="toc-emacspeak_002dsounds_002dselect_002dtheme" href="emacspeak_002dsounds.html#emacspeak_002dsounds_002dselect_002dtheme">12.176.1.1 emacspeak-sounds-select-theme</a></li>
-        <li><a id="toc-emacspeak_002dtoggle_002dauditory_002dicons" href="emacspeak_002dsounds.html#emacspeak_002dtoggle_002dauditory_002dicons">12.176.1.2 emacspeak-toggle-auditory-icons</a></li>
+        <li><a id="toc-emacspeak_002dsounds_002dselect_002dtheme" href="emacspeak_002dsounds.html#emacspeak_002dsounds_002dselect_002dtheme">12.176.2.1 emacspeak-sounds-select-theme</a></li>
+        <li><a id="toc-emacspeak_002dtoggle_002dauditory_002dicons" href="emacspeak_002dsounds.html#emacspeak_002dtoggle_002dauditory_002dicons">12.176.2.2 emacspeak-toggle-auditory-icons</a></li>
       </ul></li>
-      <li><a id="toc-emacspeak_002dsounds-Options" href="emacspeak_002dsounds.html#emacspeak_002dsounds-Options">12.176.2 emacspeak-sounds Options</a></li>
+      <li><a id="toc-emacspeak_002dsounds-Options" href="emacspeak_002dsounds.html#emacspeak_002dsounds-Options">12.176.3 emacspeak-sounds Options</a></li>
     </ul></li>
     <li><a id="toc-emacspeak_002dspeak-1" href="emacspeak_002dspeak.html">12.177 emacspeak-speak</a>
     <ul class="no-bullet">
