--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -514,6 +514,7 @@ but quickly switch to a window by name.
 <dt id="index-emacspeak_002dsilence"><span class="category">Command: </span><span><strong>emacspeak-silence</strong><a href='#index-emacspeak_002dsilence' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
 <dt id='index-_003csilence_003e'><span><kbd>&lt;silence&gt;</kbd><a href='#index-_003csilence_003e' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cXF86AudioPlay_003e'><span><kbd>&lt;XF86AudioPlay&gt;</kbd><a href='#index-_003cXF86AudioPlay_003e' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-emacspeak_002dsilence-1"></span>
