--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -343,6 +343,9 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-_003chelp_003e-_005c"><code>&lt;help&gt; \</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dmuggles.html#index-_003cprint_003e"><code>&lt;print&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dmuggles.html">emacspeak-muggles</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-_003csilence_003e"><code>&lt;silence&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
+<tr><td></td><td valign="top"><a href="amixer.html#index-_003cXF86AudioLowerVolume_003e"><code>&lt;XF86AudioLowerVolume&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="amixer.html">amixer</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dspeak.html#index-_003cXF86AudioPlay_003e"><code>&lt;XF86AudioPlay&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dspeak.html">emacspeak-speak</a></td></tr>
+<tr><td></td><td valign="top"><a href="amixer.html#index-_003cXF86AudioRaiseVolume_003e"><code>&lt;XF86AudioRaiseVolume&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="amixer.html">amixer</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
 <tr><th id="Key-Index_ky_letter-C">C</th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-C_002d_0027-_002c"><code>C-' ,</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
