--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -72,6 +72,8 @@ default values, Press <kbd>C-j</kbd>.
 <ul class="section-toc">
 <li><a href="#amixer-2" accesskey="1">amixer</a></li>
 <li><a href="#amixer_002dstore" accesskey="2">amixer-store</a></li>
+<li><a href="#amixer_002dvolume_002ddown" accesskey="3">amixer-volume-down</a></li>
+<li><a href="#amixer_002dvolume_002dup" accesskey="4">amixer-volume-up</a></li>
 </ul>
 <div class="subsubsection" id="amixer-2">
 <h4 class="subsubsection">12.1.1.1 amixer</h4>
@@ -105,6 +107,38 @@ Interactive prefix arg refreshes cache.
 </dd></dl>
 
 </div>
+<div class="subsubsection" id="amixer_002dvolume_002ddown">
+<h4 class="subsubsection">12.1.1.3 amixer-volume-down</h4>
+<dl class="def">
+<dt id="index-amixer_002dvolume_002ddown"><span class="category">Command: </span><span><strong>amixer-volume-down</strong><a href='#index-amixer_002dvolume_002ddown' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-_003cXF86AudioLowerVolume_003e'><span><kbd>&lt;XF86AudioLowerVolume&gt;</kbd><a href='#index-_003cXF86AudioLowerVolume_003e' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-amixer_002dvolume_002ddown-1"></span>
+
+<div class="format">
+<pre class="format">Lower volume 5% on default PA sink.
+</pre></div>
+</dd></dl>
+
+</div>
+<div class="subsubsection" id="amixer_002dvolume_002dup">
+<h4 class="subsubsection">12.1.1.4 amixer-volume-up</h4>
+<dl class="def">
+<dt id="index-amixer_002dvolume_002dup"><span class="category">Command: </span><span><strong>amixer-volume-up</strong><a href='#index-amixer_002dvolume_002dup' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-_003cXF86AudioRaiseVolume_003e'><span><kbd>&lt;XF86AudioRaiseVolume&gt;</kbd><a href='#index-_003cXF86AudioRaiseVolume_003e' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-amixer_002dvolume_002dup-1"></span>
+
+<div class="format">
+<pre class="format">Raise volume 5% on default PA sink.
+</pre></div>
+</dd></dl>
+
+</div>
 </div>
 <div class="subsection" id="amixer-Options">
 <h4 class="subsection">12.1.2 amixer Options</h4>
@@ -116,6 +150,11 @@ Interactive prefix arg refreshes cache.
 </dd></dl>
 
 </div>
+</div>
+<hr>
+<div class="header">
+<p>
+Next: <a href="cd_002dtool.html">cd-tool</a>, Up: <a href="Emacspeak-Commands-And-Options.html">Emacspeak Commands And Options</a> &nbsp; [<a href="index.html#SEC_Contents" title="Table of contents" rel="contents">Contents</a>][<a href="Concept-Index.html" title="Index" rel="index">Index</a>]</p>
 </div>
 
 
