--- a/manual/index.html
+++ b/manual/index.html
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 
 
 <p>This manual documents <strong>Emacspeak, The Complete Audio Desktop</strong>
-and  was last updated on June 21, 2022.
+and  was last updated on June 26, 2022.
 </p>
 
 <div class="top" id="Top">
@@ -176,6 +176,8 @@ Next: <a href="Copyright.html" accesskey="n" rel="next">Copyright</a> &nbsp; [<a
       <ul class="no-bullet">
         <li><a id="toc-amixer-2" href="amixer.html#amixer-2">12.1.1.1 amixer</a></li>
         <li><a id="toc-amixer_002dstore" href="amixer.html#amixer_002dstore">12.1.1.2 amixer-store</a></li>
+        <li><a id="toc-amixer_002dvolume_002ddown" href="amixer.html#amixer_002dvolume_002ddown">12.1.1.3 amixer-volume-down</a></li>
+        <li><a id="toc-amixer_002dvolume_002dup" href="amixer.html#amixer_002dvolume_002dup">12.1.1.4 amixer-volume-up</a></li>
       </ul></li>
       <li><a id="toc-amixer-Options" href="amixer.html#amixer-Options">12.1.2 amixer Options</a></li>
     </ul></li>
