--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -50,7 +50,7 @@ Previous: <a href="xbacklight.html" accesskey="p" rel="prev">xbacklight</a>, Up:
 <hr>
 <span id="URL-Templates-1"></span><h3 class="section">12.237 URL Templates</h3>
 
-<p>This section documents a total of 74 URL Templates.
+<p>This section documents a total of 75 URL Templates.
 </p>
 <p>All of these URL templates can be invoked via command
  <kbd>M-x emacspeak-url-template-fetch</kbd> normally bound to
@@ -196,7 +196,9 @@ Format is stationid+AM/FM.</p></li><li> <b>Tech News From CNet</b>
 
 <p>Display tech news from CNET</p></li><li> <b>TuneIn Radio</b>
 
-<p>Translate StreamId to playable stream.</p></li><li> <b>Washington Post</b>
+<p>Translate StreamId to playable stream.</p></li><li> <b>US Stock Market From Google </b>
+
+<p>Light-weight Google US Stock Markets.</p></li><li> <b>Washington Post</b>
 
 <p>Washington Post Contents</p></li><li> <b>Wiki Data Search</b>
 
