--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -113,12 +113,13 @@ Interactive prefix arg refreshes cache.
 <dt id="index-amixer_002dvolume_002ddown"><span class="category">Command: </span><span><strong>amixer-volume-down</strong><a href='#index-amixer_002dvolume_002ddown' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
 <dt id='index-_003cXF86AudioLowerVolume_003e'><span><kbd>&lt;XF86AudioLowerVolume&gt;</kbd><a href='#index-_003cXF86AudioLowerVolume_003e' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-C_002d_003cf2_003e'><span><kbd>C-&lt;f2&gt;</kbd><a href='#index-C_002d_003cf2_003e' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-amixer_002dvolume_002ddown-1"></span>
 
 <div class="format">
-<pre class="format">Lower volume 5% on default PA sink.
+<pre class="format">Lower Mastervolume 5%.
 </pre></div>
 </dd></dl>
 
@@ -129,12 +130,13 @@ Interactive prefix arg refreshes cache.
 <dt id="index-amixer_002dvolume_002dup"><span class="category">Command: </span><span><strong>amixer-volume-up</strong><a href='#index-amixer_002dvolume_002dup' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
 <dt id='index-_003cXF86AudioRaiseVolume_003e'><span><kbd>&lt;XF86AudioRaiseVolume&gt;</kbd><a href='#index-_003cXF86AudioRaiseVolume_003e' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-C_002d_003cf1_003e'><span><kbd>C-&lt;f1&gt;</kbd><a href='#index-C_002d_003cf1_003e' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-amixer_002dvolume_002dup-1"></span>
 
 <div class="format">
-<pre class="format">Raise volume 5% on default PA sink.
+<pre class="format">Raise Master volume 5%.
 </pre></div>
 </dd></dl>
 
