--- a/manual/emacspeak_002dlibrivox.html
+++ b/manual/emacspeak_002dlibrivox.html
@@ -93,8 +93,8 @@ for accessing the book.
 <dl class="def">
 <dt id="index-emacspeak_002dlibrivox"><span class="category">Command: </span><span><strong>emacspeak-librivox</strong> <em>(search-type)</em><a href='#index-emacspeak_002dlibrivox' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
-<dt id='index-C_002d_003b-l'><span><kbd>C-; l</kbd><a href='#index-C_002d_003b-l' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-h-l'><span><kbd>C-x @ h l</kbd><a href='#index-C_002dx-_0040-h-l' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-C_002d_003b-C_002dl'><span><kbd>C-; C-l</kbd><a href='#index-C_002d_003b-C_002dl' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-C_002dx-_0040-h-C_002dl'><span><kbd>C-x @ h C-l</kbd><a href='#index-C_002dx-_0040-h-C_002dl' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-emacspeak_002dlibrivox-1"></span>
